# affiliate-bot-qa

./: .env.example  DEVELOPMENT.md  LICENSE  QUICK_REFERENCE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
scripts/: setup.ps1
src/: main.py
src/application/factories/: __init__.py  bot_config_factory.py
src/application/services/: customer_data_generator.py  human_simulation.py
src/application/use_cases/: __init__.py  execute_purchase_simulation.py
src/domain/: __init__.py
src/domain/models/: bot_config.py  order.py
src/infrastructure/: __init__.py
src/infrastructure/config/: settings.py
src/infrastructure/web/: __init__.py  base_page.py  playwright_automation.py
src/infrastructure/web/pages/: __init__.py  cart_page.py  checkout_page.py  home_page.py  product_page.py
src/presentation/: __init__.py  bot_orchestrator.py  cli.py
tests/unit/: test_bot_config_factory.py  test_human_simulation.py  test_order.py
